dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-fastapi
  namespace: simple-fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-fastapi
  template:
    metadata:
      labels:
        app: simple-fastapi
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: simple-fastapi
          image: ghcr.io/fastapi-argocd-test/simple-fastapi:adeb3cc
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
