dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-fastapi
  namespace: simple-fastapi
spec:
  ingressClassName: traefik
  rules:
    - host: fastapi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-fastapi
                port:
                  number: 80
